test/src/e2e_vm_tests/test_programs/should_fail/multiple_config_blocks_two_libs/src/lib1.sw
library lib1;

configurable {
    X: u64 = 55,
}
